--- a/index.html
+++ b/index.html
@@ -781,6 +781,33 @@
                             }
                         },
 
+
+
+
+
+
+                        {
+                            cate: '其',
+                            name: 'KKFIX手機平板筆電專業維修',
+                            businessDays: [
+                                { date: '01/27(一)', time: '11AM~9PM' },
+                                // { date: '01/28 除夕', time: '' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                { date: '01/31 初三', time: '11AM~5PM' },
+                                { date: '02/01 初四', time: '11AM~5PM' },
+                                { date: '02/02 初五', time: '11AM~5PM' },
+                            ],
+                            note: '新春優惠~Apple原廠電池只要$2090起',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/KKFix3c/',
+                                // instagram: '',
+                                 line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/1mmVKMZpJF2FBkR27'
+                            }
+                        },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
