--- a/index.html
+++ b/index.html
@@ -798,13 +798,40 @@
                                 { date: '02/01 初四', time: '11AM~5PM' },
                                 { date: '02/02 初五', time: '11AM~5PM' },
                             ],
-                            note: '新春優惠~Apple原廠電池只要$2090起',
+                            note: '七堵車站商店街內，新春優惠~Apple原廠電池只要$2090起',
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/KKFix3c/',
                                 // instagram: '',
                                  line: '',
                                 // customLink:'',
                                 map: 'https://maps.app.goo.gl/1mmVKMZpJF2FBkR27'
+                            }
+                        },
+
+
+
+
+
+
+                        {
+                            cate: '喝',
+                            name: '吳教練咖啡工作室 ',
+                            businessDays: [
+                                // { date: '01/27(一)', time: '' },
+                                // { date: '01/28 除夕', time: '' },
+                                // { date: '01/29 初一', time: '' },
+                                // { date: '01/30 初二', time: '' },
+                                { date: '01/31 初三', time: '10AM~6:30PM' },
+                                { date: '02/01 初四', time: '10AM~6:30PM' },
+                                { date: '02/02 初五', time: '10AM~6:30PM' },
+                            ],
+                            note: '七堵車站商店街內',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/profile.php?id=100063573416278',
+                                // instagram: '',
+                                 line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/VViTPm5JmjRiUfSn9'
                             }
                         },
 
