--- a/index.html
+++ b/index.html
@@ -835,6 +835,87 @@
                             }
                         },
 
+
+
+
+
+
+                        {
+                            cate: '其',
+                            name: '全聯',
+                            businessDays: [
+                                { date: '01/27(一)', time: '正常營業' },
+                                { date: '01/28 除夕', time: '8AM~5PM' },
+                                { date: '01/29 初一', time: '9AM~9PM' },
+                                { date: '01/30 初二', time: '9AM~9PM' },
+                                { date: '01/31 初三', time: '9AM~9PM' },
+                                // { date: '02/01 初四', time: '' },
+                                { date: '02/02 初五', time: '正常營業' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/pxmartchannel/',
+                                // instagram: '',
+                                 line: '',
+                                // customLink:'',
+                                map: 'https://www.pxmart.com.tw/customer-service/stores'
+                            }
+                        },
+
+
+
+
+
+
+                        {
+                            cate: '其',
+                            name: '家樂福超市',
+                            businessDays: [
+                                { date: '01/27(一)', time: '正常營業' },
+                                { date: '01/28 除夕', time: '7AM~5PM' },
+                                { date: '01/29 初一', time: '9AM~10PM' },
+                                { date: '01/30 初二', time: '9AM~10PM' },
+                                { date: '01/31 初三', time: '9AM~10PM' },
+                                { date: '02/01 初四', time: '9AM~10PM' },
+                                { date: '02/02 初五', time: '9AM~10PM' },
+                            ],
+                            note: '我還是習慣叫頂好',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/profile.php?id=100083029215961',
+                                // instagram: '',
+                                //  line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/8tFyW8sVe81qSQUz7'
+                            }
+                        },
+
+
+
+
+
+
+                        {
+                            cate: '喝',
+                            name: '10Apt.Selection',
+                            businessDays: [
+                                { date: '01/27(一)', time: '10AM~7PM' },
+                                { date: '01/28 除夕', time: '10AM~4PM' },
+                                { date: '01/29 初一', time: '10AM~6PM' },
+                                { date: '01/30 初二', time: '10AM~6PM' },
+                                { date: '01/31 初三', time: '10AM~6PM' },
+                                // { date: '02/01 初四', time: '' },
+                                // { date: '02/02 初五', time: '' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/profile.php?id=100088847564221',
+                                // instagram: '',
+                                //  line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/tnDGPw9wpCuc7snx9'
+                            }
+                        },
+
                         //  {
                         //                             cate: '其',
                         //                             name: '名',
