--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/profile.php?id=100063662696675',
                                 // instagram: '',
-                                 line: '',
+                                //  line: '',
                                 // customLink:'',
                                 map: 'https://maps.app.goo.gl/6P1aGy1pK75od6PZ7'
                             }
@@ -802,7 +802,7 @@
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/KKFix3c/',
                                 // instagram: '',
-                                 line: '',
+                                //  line: '',
                                 // customLink:'',
                                 map: 'https://maps.app.goo.gl/1mmVKMZpJF2FBkR27'
                             }
@@ -829,7 +829,7 @@
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/profile.php?id=100063573416278',
                                 // instagram: '',
-                                 line: '',
+                                //  line: '',
                                 // customLink:'',
                                 map: 'https://maps.app.goo.gl/VViTPm5JmjRiUfSn9'
                             }
@@ -856,7 +856,7 @@
                             socialLinks: {
                                 facebook: 'https://www.facebook.com/pxmartchannel/',
                                 // instagram: '',
-                                 line: '',
+                                //  line: '',
                                 // customLink:'',
                                 map: 'https://www.pxmart.com.tw/customer-service/stores'
                             }
