--- a/index.html
+++ b/index.html
@@ -703,9 +703,6 @@
                             }
                         },
 
-
-
-
                         {
                             cate: '吃',
                             name: '皇冠果汁·雞蛋糕',
@@ -729,9 +726,6 @@
                         },
 
 
-
-
-
                         {
                             cate: '吃',
                             name: '上毅美食炸雞七堵總店',
@@ -753,9 +747,6 @@
                                 map: 'https://maps.app.goo.gl/6P1aGy1pK75od6PZ7'
                             }
                         },
-
-
-
 
 
 
@@ -783,9 +774,6 @@
 
 
 
-
-
-
                         {
                             cate: '其',
                             name: 'KKFIX手機平板筆電專業維修',
@@ -807,9 +795,6 @@
                                 map: 'https://maps.app.goo.gl/1mmVKMZpJF2FBkR27'
                             }
                         },
-
-
-
 
 
 
@@ -837,9 +822,6 @@
 
 
 
-
-
-
                         {
                             cate: '其',
                             name: '全聯',
@@ -861,9 +843,6 @@
                                 map: 'https://www.pxmart.com.tw/customer-service/stores'
                             }
                         },
-
-
-
 
 
 
@@ -891,9 +870,6 @@
 
 
 
-
-
-
                         {
                             cate: '喝',
                             name: '10Apt.Selection',
@@ -913,6 +889,30 @@
                                 //  line: '',
                                 // customLink:'',
                                 map: 'https://maps.app.goo.gl/tnDGPw9wpCuc7snx9'
+                            }
+                        },
+
+
+
+                        {
+                            cate: '吃',
+                            name: '木子義廚坊',
+                            businessDays: [
+                                // { date: '01/27(一)', time: '' },
+                                // { date: '01/28 除夕', time: '' },
+                                { date: '01/29 初一', time: '11AM~2:30PM 4:30PM~7:30PM' },
+                                { date: '01/30 初二', time: '11AM~2:30PM 4:30PM~7:30PM' },
+                                { date: '01/31 初三', time: '11AM~2:30PM 4:30PM~7:30PM' },
+                                { date: '02/01 初四', time: '11AM~2:30PM 4:30PM~7:30PM' },
+                                { date: '02/02 初五', time: '11AM~2:30PM 4:30PM~7:30PM' },
+                            ],
+                            note: '',
+                            socialLinks: {
+                                facebook: 'https://www.facebook.com/profile.php?id=100057397460938',
+                                // instagram: '',
+                                //  line: '',
+                                // customLink:'',
+                                map: 'https://maps.app.goo.gl/YDjWhTHY29exbWjL8'
                             }
                         },
 
