--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
         <div class="row">
           ${card.businessDays.map(day => `
             <div class="col-6 mb-1">
-              <div class="d-flex align-items-center">
+              <div class="d-flex">
                 <div class="card-date">${day.date}</div>
                 <div class="card-time">${day.time}</div>
               </div>
