--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <h1 class="header">2025七堵春節店家資訊</h1>
     <main>
 
-        <div class="fulid-container p-3">
-            <div class="row mb-3 nav-row sticky-top">
+        <div class="fulid-container px-3">
+            <div class="row mb-1 nav-row sticky-top">
                 <div class="col filter-button-group">
                     <!-- 日期 -->
                     <button class="filter-button selected" data-dimension="date" data-filter="*">ALL</button>
@@ -136,7 +136,7 @@
                                 { date: '01/30 初二', time: '11AM~6PM' },
                                 // { date: '01/31 初三', time: '正常營業' },
                                 // { date: '02/01 初四', time: '正常營業' },
-                                { date: '02/02 初五', time: '12:00PM~6:00PM' },
+                                { date: '02/02 初五', time: '12PM~6PM' },
                             ],
                             note: '郵局對面',
                             socialLinks: {
@@ -175,10 +175,10 @@
                             name: 'C\'est Bon Bistro棒棒小餐館',
                             businessDays: [
                                 { date: '01/27 (一)', time: '正常營業' },
-                                { date: '01/28 除夕', time: '正常營業 預約滿' },
-                                // { date: '01/29 初一', time: '休' },
-                                { date: '01/30 初二', time: '正常營業 預約滿' },
-                                { date: '01/31 初三', time: '正常營業 預約滿' },
+                                { date: '01/28 除夕', time: '正常營業<br>預約滿' },
+                                // { date: '01/29 初一', time: '' },
+                                { date: '01/30 初二', time: '正常營業<br>預約滿' },
+                                { date: '01/31 初三', time: '正常營業<br>預約滿' },
                                 { date: '02/01 初四', time: '正常營業' },
                                 { date: '02/02 初五', time: '正常營業' },
                             ],
@@ -972,7 +972,7 @@
       <div class="card-body">
         <div class="row">
           ${card.businessDays.map(day => `
-            <div class="col-6 mb-1">
+            <div class="col-md-6 mb-2">
               <div class="d-flex">
                 <div class="card-date">${day.date}</div>
                 <div class="card-time">${day.time}</div>
