--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
                         //                             socialLinks: {
                         //                                 facebook: '#',
                         //                                 instagram: '#',
-                        //                                 line:'',
+                        //                                 line:'#',
                         //                                 customLink:'#',
                         //                                 map: '#'
                         //                             }
