--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
       <div class="card-body">
         <div class="row">
           ${card.businessDays.map(day => `
-            <div class="col-6 mb-2">
+            <div class="col-md-6 mb-2">
               <div class="d-flex">
                 <div class="card-date">${day.date}</div>
                 <div class="card-time">${day.time}</div>
