--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                                 // { date: '01/30 初二', time: '' },
                                 // { date: '01/31 初三', time: '' },
                                 { date: '02/01 初四', time: '3PM~11PM' },
-                                { date: '02/02 初五', time: '3PM~11PM' },
+                                { date: '02/02 初五', time: '10AM~7PM' },
                             ],
                             note: '',
                             socialLinks: {
